@@ -7,7 +7,7 @@ plugins {
     id "de.undercouch.download" version "4.0.0"
     id 'java'
     // https://github.com/tbroyer/gradle-errorprone-plugin
-    id "net.ltgt.errorprone" version "0.8.1"
+    id "net.ltgt.errorprone" version "1.1.1"
     // https://plugins.gradle.org/plugin/org.ajoberstar.grgit
     id 'org.ajoberstar.grgit' version '3.1.1' apply false
 }
@@ -33,7 +33,7 @@ ext {
 
     annotationTools = "${parentDir}/annotation-tools"
     afu = "${annotationTools}/annotation-file-utilities"
-    afuJar = "${afu}/annotation-file-utilities-all.jar"
+    afuJar = "${afu}/annotation-file-utilities-all-but-javac.jar"
 
     stubparser = "${parentDir}/stubparser"
     stubparserJar = "${stubparser}/javaparser-core/target/stubparser.jar"
@@ -76,7 +76,7 @@ allprojects {
     //   * any new checkers have been added,
     //   * the patch level is 9 (keep the patch level as a single digit), or
     //   * backward-incompatible changes have been made to APIs or elsewhere.
-    version '2.11.1'
+    version '3.0.0'
 
     repositories {
         mavenCentral()
@@ -100,26 +100,33 @@ allprojects {
         // any module to reference classes in any other module.
         // Also, build and use ManualTaglet as a taglet.
         tasks.withType(Javadoc) {
+            def tagletVersion = isJava8 ? 'taglet' : 'tagletJdk11'
+
             dependsOn(':checker:shadowJar')
-            dependsOn(':framework-test:tagletClasses')
+            dependsOn(":framework-test:${tagletVersion}Classes")
             doFirst {
                 options.encoding = 'UTF-8'
                 options.memberLevel = javadocMemberLevel
                 classpath += files(project(':checker').tasks.getByName('shadowJar').archivePath)
+                if (isJava8) {
+                    classpath += configurations.javacJar
+                }
                 options.taglets 'org.checkerframework.taglet.ManualTaglet'
-                options.tagletPath(project(':framework-test').sourceSets.taglet.output.classesDirs.getFiles() as File[])
-                options.links = ['https://docs.oracle.com/en/java/javase/11/docs/api/', 'https://docs.oracle.com/en/java/javase/11/docs/jdk/api/javac/tree/']
+                options.tagletPath(project(':framework-test').sourceSets."${tagletVersion}".output.classesDirs.getFiles() as File[])
+                // TODO: this doesn't work with JDK 11
+                options.links = isJava8 ? ['https://docs.oracle.com/en/java/javase/11/docs/api/', 'https://docs.oracle.com/en/java/javase/11/docs/jdk/api/javac/tree/'] : []
                 // This file is looked for by Javadoc.
                 file("${destinationDir}/resources/fonts/").mkdirs()
                 ant.touch(file: "${destinationDir}/resources/fonts/dejavu.css")
+                options.addStringOption('source', '8')
             }
         }
 
-	/// TODO: One day we can enable this.  For now, CI jobs require Javadoc on changed lines.
-	// // Turn Javadoc warnings into errors.
-	// tasks.withType(Javadoc) {
-	//     options.addStringOption('Xwerror', '-quiet')
-	// }
+        /// TODO: One day we can enable this.  For now, CI jobs require Javadoc on changed lines.
+        // // Turn Javadoc warnings into errors.
+        // tasks.withType(Javadoc) {
+        //     options.addStringOption('Xwerror', '-quiet')
+        // }
 
         // Add standard javac options
         tasks.withType(JavaCompile) {
@@ -282,12 +289,14 @@ task htmlValidate(type: Exec, group: 'Format') {
 task allJavadoc(type: Javadoc, group: "Documentation") {
     description = 'Generates a global API documentation for all the modules'
     dependsOn(':checker:shadowJar')
-    dependsOn(':framework-test:tagletClasses')
     destinationDir = file("${rootDir}/docs/api")
     source(project(':checker').sourceSets.main.allJava, project(':framework').sourceSets.main.allJava,
             project(':dataflow').sourceSets.main.allJava, project(':javacutil').sourceSets.main.allJava)
 
     classpath = files(subprojects.collect { it.sourceSets.main.compileClasspath })
+    if (isJava8) {
+        classpath += configurations.javacJar
+    }
     doLast {
         copy {
             from 'docs/logo/Checkmark/CFCheckmark_favicon.png'
@@ -431,10 +440,10 @@ subprojects {
 
     dependencies {
         // https://mvnrepository.com/artifact/com.google.errorprone/error_prone_core
-	// If you update this:
-	//  * Temporarily comment out "-Werror" elsewhere in this file
-	//  * Repeatedly run `./gradlew clean runErrorProne` and fix all errors
-	//  * Uncomment "-Werror"
+        // If you update this:
+        //  * Temporarily comment out "-Werror" elsewhere in this file
+        //  * Repeatedly run `./gradlew clean runErrorProne` and fix all errors
+        //  * Uncomment "-Werror"
         errorprone group: 'com.google.errorprone', name: 'error_prone_core', version: '2.3.3'
     }
 
@@ -486,6 +495,7 @@ subprojects {
         relocate 'org.apache', 'org.checkerframework.org.apache'
         relocate 'org.relaxng', 'org.checkerframework.org.relaxng'
         relocate 'org.plumelib', 'org.checkerframework.org.plumelib'
+        relocate 'org.codehaus', 'org.checkerframework.org.codehaus'
         // relocate 'sun', 'org.checkerframework.sun'
         relocate 'org.objectweb.asm', 'org.checkerframework.org.objectweb.asm'
         relocate 'com.google', 'org.checkerframework.com.google'
@@ -521,11 +531,25 @@ subprojects {
         // Adds manifest to all Jar files
         tasks.withType(Jar) {
             includeEmptyDirs = false
+            if (archiveFileName.get().startsWith("checker-qual")) {
+                metaInf {
+                    from './LICENSE.txt'
+                }
+            } else {
+                from("$rootDir") {
+                    include "LICENSE.txt"
+                }
+            }
             manifest {
                 attributes("Implementation-Version": "${version}")
                 attributes("Implementation-URL": "https://checkerframework.org")
-		if (archiveFileName != "checker-source.jar") {
+                if (! archiveFileName.get().endsWith("source.jar")) {
                     attributes('Automatic-Module-Name': "org.checkerframework." + project.name.replaceAll('-', '.'))
+                }
+                if (archiveFileName.get().startsWith("checker-qual")) {
+                    attributes("Bundle-License": "MIT")
+                } else {
+                    attributes("Bundle-License": "(GPL-2.0-only WITH Classpath-exception-2.0)")
                 }
             }
         }
@@ -569,17 +593,27 @@ subprojects {
                                 "-javacoptions:-source 8",
                                 "-javacoptions:-target 8"
                                 ]
+                            if (project.name.is('checker')) {
+                                args += [
+                                        "-javacoptions:-Xbootclasspath/p:${projectDir}/dist/jdk8.jar",
+                                ]
+                            }
+                        } else {
+                            args += [
+                                    // checker/jtreg/nullness/defaultsPersist/ReferenceInfoUtil.java
+                                    // uses the jdk.jdeps module.
+                                    "-javacoptions:--add-modules jdk.jdeps",
+                                    "-javacoptions:--add-exports=jdk.jdeps/com.sun.tools.classfile=ALL-UNNAMED",
+                            ]
                         }
                         if (project.name.is('framework')) {
                             // Do not check for the annotated JDK
                             args += [
                                     "-javacoptions:-Anocheckjdk"
                             ]
-                        }
-                        if (isJava8 && project.name.is('checker')) {
-                            // TODO: enable annotated JDK on Java 9+
+                        } else if (project.name.is('checker')) {
                             args += [
-                                    "-javacoptions:-Xbootclasspath/p:${projectDir}/dist/jdk8.jar",
+                                    "-javacoptions:-classpath ${sourceSets.testannotations.output.asPath}",
                             ]
                         }
 
@@ -601,10 +635,15 @@ subprojects {
 
         // Configure JUnit tests
         tasks.withType(Test) {
-            if (!isJava8) {
+            if (isJava8) {
+                jvmArgs "-Xbootclasspath/p:${configurations.javacJar.asPath}"
+            } else {
+                // Without this, the test throw "java.lang.OutOfMemoryError: Java heap space"
+                forkEvery(1)
                 jvmArgs += [
-                    "--add-opens", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED"
-                    ]
+                        "--illegal-access=warn",
+                        "--add-opens", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+                ]
             }
 
             if (project.name.is('checker')) {
@@ -614,10 +653,6 @@ subprojects {
 
             if (project.hasProperty('emit.test.debug')) {
                 systemProperties += ["emit.test.debug": 'true']
-            }
-
-            if (isJava8) {
-                jvmArgs "-Xbootclasspath/p:${configurations.javacJar.asPath}"
             }
 
             testLogging {
@@ -668,17 +703,17 @@ subprojects {
                     '-Xep:StringSplitter:OFF',
                     // Too broad, rejects seemingly-correct code.
                     '-Xep:EqualsGetClass:OFF',
-		    // Not a real problem
-		    '-Xep:MixedMutabilityReturnType:OFF',
-		    // -Werror halts the build if Error Prone issues a warning, which ensures that
-		    // the errors get fixed.  On the downside, Error Prone (or maybe the compiler?)
-		    // stops as soon as it one warning, rather than outputting them all.
-		    // https://github.com/google/error-prone/issues/436
- 		    '-Werror',
+                    // Not a real problem
+                    '-Xep:MixedMutabilityReturnType:OFF',
+                    // -Werror halts the build if Error Prone issues a warning, which ensures that
+                    // the errors get fixed.  On the downside, Error Prone (or maybe the compiler?)
+                    // stops as soon as it one warning, rather than outputting them all.
+                    // https://github.com/google/error-prone/issues/436
+                    '-Werror',
             ]
         }
 
-        // Create an allTests task
+        // Create an allTests task per project
         tasks.create(name: 'allTests', type: GradleBuild, group: 'Verification') {
             description 'Run all Checker Framework tests'
             tasks = ['test', 'checkPurity']
